<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.search.SearchBar
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Cari disini" />

    <com.google.android.material.search.SearchView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="Wilayah"
        app:layout_anchor="@id/search_bar">

        <ListView
            android:id="@+id/areaListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/sv"
            android:divider="#ad5"
            android:dividerHeight="2dp" />
    </com.google.android.material.search.SearchView>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.MapsFragment" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_bar"
        android:layout_marginStart="8dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/disasterChipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/floodChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/flood"
                    app:checkedIconVisible="true"
                    app:chipIcon="@drawable/baseline_add_24" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/earthquakeChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/earthquake"
                    app:checkedIconVisible="true"
                    app:chipIcon="@drawable/baseline_add_24" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/fireChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/fire"
                    app:checkedIconVisible="true"
                    app:chipIcon="@drawable/baseline_add_24" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/hazeChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/haze"
                    app:checkedIconVisible="true"
                    app:chipIcon="@drawable/baseline_add_24" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/volcanoChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/volcano"
                    app:checkedIconVisible="true"
                    app:chipIcon="@drawable/baseline_add_24" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/windChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/wind"
                    app:checkedIconVisible="true"
                    app:chipIcon="@drawable/baseline_add_24" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

    </HorizontalScrollView>


    <LinearLayout
        android:id="@+id/persistent_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        app:behavior_peekHeight="40dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/latestDisasterRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
