<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_period"
        android:icon="@drawable/baseline_access_time_24"
        android:title="@string/period"
        app:showAsAction="always"
        />

    <item android:id="@+id/menu_saved"
        android:icon="@drawable/baseline_bookmark_border_24"
        android:title="@string/saved"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_settings"
        android:icon="@drawable/outline_settings_24"
        android:title="@string/settings"
        app:showAsAction="always"/>
</menu>